--- a/api/package.json
+++ b/api/package.json
@@ -16,12 +16,16 @@
     "@types/body-parser": "^1.19.1",
     "@types/cors": "^2.8.11",
     "@types/jsonwebtoken": "^8.5.3",
+    "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.0"
+    "mongoose": "^5.13.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
