--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^8.5.3",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
+    "@types/socket.io": "^3.0.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -25,7 +26,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.0",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "socket.io": "^4.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
