--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "@types/body-parser": "^1.19.1",
     "@types/cors": "^2.8.11",
     "@types/jsonwebtoken": "^8.5.3",
+    "@types/node-rsa": "^1.1.1",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
     "@types/socket.io": "^3.0.2",
@@ -26,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^5.13.0",
+    "node-rsa": "^1.1.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "socket.io": "^4.1.3"
