--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.15",
+    "@types/node-rsa": "^1.1.1",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "node-rsa": "^1.1.1",
     "proxy": "^1.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
