--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
+    "@types/js-cookie": "^2.2.7",
     "@types/node": "^12.20.15",
     "@types/node-rsa": "^1.1.1",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "js-cookie": "^3.0.0",
     "node-rsa": "^1.1.1",
     "proxy": "^1.0.2",
     "react": "^17.0.2",
